Squashed commit of the following:
commit c9f73b52d98600b1783c2f4a662ff8fba88cb525
Author: Vandenplas, Jeremie <jeremie.vandenplas@gmail.com>
Date:   Sun Mar 1 20:20:58 2020 +0100

    moment_dev

commit df4fedbf231830297e64c719025df70ca96e601c
Author: Vandenplas, Jeremie <jeremie.vandenplas@gmail.com>
Date:   Sat Feb 29 22:26:53 2020 +0100

    moment_dev: addition of TOCs

commit 20a76b82de37a340c66b48e832afec68277ac05e
Author: Vandenplas, Jeremie <jeremie.vandenplas@gmail.com>
Date:   Sat Feb 29 22:19:03 2020 +0100

    moment_dev: addition of spec

commit 7c33e00cbe1d1efb91f6fb59ad27043582ee6f00
Author: Vandenplas, Jeremie <jeremie.vandenplas@gmail.com>
Date:   Sat Feb 29 21:07:24 2020 +0100

    moment_dev: addition of tests for complex

commit 6c2630be4ce1a03fa583ae0487343c9ddde2bdef
Author: Vandenplas, Jeremie <jeremie.vandenplas@gmail.com>
Date:   Fri Feb 28 23:33:00 2020 +0100

    moment_dev: test progress

commit 1743f87c83762b4bc053c6695756f9fb4464bfbd
Author: Vandenplas, Jeremie <jeremie.vandenplas@gmail.com>
Date:   Fri Feb 28 22:25:43 2020 +0100

    moment_dev: correction of moment for complex

commit dfbdd9761560fa8891dbe18ffbac284986362e64
Merge: 195c62d 5f35833
Author: Vandenplas, Jeremie <jeremie.vandenplas@gmail.com>
Date:   Fri Feb 28 20:12:35 2020 +0100

    Merge remote-tracking branch 'upstream/master' into moment_dev

commit 195c62d7f16f8b25bda0bb6f9fce4565def74173
Author: Vandenplas, Jeremie <jeremie.vandenplas@gmail.com>
Date:   Sun Feb 23 20:26:09 2020 +0100

    moment_dev: removed some explicit statements

commit 7c5233f74ceb3d5a5637fba5f09923e49a056e4f
Author: Vandenplas, Jeremie <jeremie.vandenplas@gmail.com>
Date:   Sat Feb 22 16:51:06 2020 +0100

    moment_dev: addtition of test

commit 5ff096836e32f44d297b0f8bb75f26a20902f5f6
Author: Vandenplas, Jeremie <jeremie.vandenplas@gmail.com>
Date:   Sat Feb 22 16:09:54 2020 +0100

    moment_dev: addition of a function for central moment

--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -8,6 +8,7 @@ SRC = f18estop.f90 \
       stdlib_experimental_quadrature_trapz.f90 \
       stdlib_experimental_stats.f90 \
       stdlib_experimental_stats_mean.f90 \
+      stdlib_experimental_stats_moment.f90 \
       stdlib_experimental_stats_var.f90
 
 LIB = libstdlib.a
@@ -46,6 +47,10 @@ stdlib_experimental_stats_mean.o: \
 	stdlib_experimental_optval.o \
 	stdlib_experimental_kinds.o \
 	stdlib_experimental_stats.o
+stdlib_experimental_stats_moment.o: \
+	stdlib_experimental_optval.o \
+	stdlib_experimental_kinds.o \
+	stdlib_experimental_stats.o
 stdlib_experimental_stats_var.o: \
 	stdlib_experimental_optval.o \
 	stdlib_experimental_kinds.o \
@@ -56,4 +61,5 @@ stdlib_experimental_io.f90: stdlib_experimental_io.fypp
 stdlib_experimental_quadrature.f90: stdlib_experimental_quadrature.fypp
 stdlib_experimental_stats.f90: stdlib_experimental_stats.fypp
 stdlib_experimental_stats_mean.f90: stdlib_experimental_stats_mean.fypp
+stdlib_experimental_stats_moment.f90: stdlib_experimental_stats_moment.fypp
 stdlib_experimental_stats_var.f90: stdlib_experimental_stats_var.fypp
