--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -2,6 +2,8 @@ SRC = f18estop.f90 \
       stdlib_experimental_ascii.f90 \
       stdlib_experimental_error.f90 \
       stdlib_experimental_io.f90 \
+      stdlib_experimental_linalg.f90 \
+      stdlib_experimental_linalg_diag.f90 \
       stdlib_experimental_kinds.f90 \
       stdlib_experimental_optval.f90 \
       stdlib_experimental_quadrature.f90 \
@@ -42,6 +44,7 @@ stdlib_experimental_io.o: \
 	stdlib_experimental_error.o \
 	stdlib_experimental_optval.o \
 	stdlib_experimental_kinds.o
+stdlib_experimental_linalg_diag.o: stdlib_experimental_kinds.o
 stdlib_experimental_optval.o: stdlib_experimental_kinds.o
 stdlib_experimental_quadrature.o: stdlib_experimental_kinds.o
 stdlib_experimental_stats_mean.o: \
@@ -59,6 +62,8 @@ stdlib_experimental_stats_var.o: \
 
 # Fortran sources that are built from fypp templates
 stdlib_experimental_io.f90: stdlib_experimental_io.fypp
+stdlib_experimental_linalg.f90: stdlib_experimental_linalg.fypp
+stdlib_experimental_linalg_diag.f90: stdlib_experimental_linalg_diag.fypp
 stdlib_experimental_quadrature.f90: stdlib_experimental_quadrature.fypp
 stdlib_experimental_stats.f90: stdlib_experimental_stats.fypp
 stdlib_experimental_stats_mean.f90: stdlib_experimental_stats_mean.fypp
