--- a/.github/workflows/doc-deployment.yml
+++ b/.github/workflows/doc-deployment.yml
@@ -32,7 +32,7 @@ jobs:
           ford --version
           gfortran --version
       - name: Skip graph and search unless deploying
-        if: ! ( startsWith( github.ref, 'refs/tags/' ) || github.ref == 'refs/heads/master' )
+        if: github.ref != 'refs/heads/master' && ! startsWith( github.ref, 'refs/tags/' )
         run: |
             sed -i .bak 's/^[[:blank:]]*graph:  *[Tt]rue/graph: false/' "${FORD_FILE}"
             echo "::set-env name=MAYBE_SKIP_SEARCH::--no-search"
