CI: fix attempt #2 for PR spelling review

--- a/.github/workflows/PR-review.yml
+++ b/.github/workflows/PR-review.yml
@@ -14,4 +14,4 @@ jobs:
           locale: "US"
           reporter: github-pr-review
           level: warning
-          ignore: [colour]
+          ignore: colour
