--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,22 @@ include(${CMAKE_SOURCE_DIR}/cmake/stdlib.cmake)
 # --- compiler options
 if(CMAKE_Fortran_COMPILER_ID STREQUAL GNU)
   add_compile_options(-fimplicit-none)
+  add_compile_options(-ffree-line-length-132)
+  add_compile_options(-Wall)
+  add_compile_options(-Wextra)
+  add_compile_options(-Wimplicit-procedure)
+  add_compile_options(-Wconversion-extra)
+  add_compile_options(-std=f2018)
+  add_compile_options(-pedantic-errors)
+  add_compile_options(-fallow-invalid-boz) # ToDo: hack for invalid code
 elseif(CMAKE_Fortran_COMPILER_ID STREQUAL Intel)
-  add_compile_options(-warn declarations)
+  add_compile_options(-warn declarations,general,usage,interfaces,unused)
+  add_compile_options(-standard-semantics)
+  if(CMAKE_Fortran_COMPILER_VERSION VERSION_LESS 18.0)
+    add_compile_options(-stand f15)
+  else()
+    add_compile_options(-stand f18)
+  endif()
 elseif(CMAKE_Fortran_COMPILER_ID STREQUAL PGI)
   add_compile_options(-Mdclchk)
 endif()
