--- a/src/tests/optval/CMakeLists.txt
+++ b/src/tests/optval/CMakeLists.txt
@@ -1,1 +1,5 @@
 ADDTEST(optval)
+# prevent false positive (https://gcc.gnu.org/bugzilla/show_bug.cgi?id=95446)
+if(CMAKE_Fortran_COMPILER_ID STREQUAL GNU)
+  set_source_files_properties("test_optval.f90" PROPERTIES COMPILE_FLAGS "-Wno-error=pedantic")
+endif()
