--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -5,6 +5,7 @@ SRC = f18estop.f90 \
       stdlib_experimental_linalg.f90 \
       stdlib_experimental_linalg_diag.f90 \
       stdlib_experimental_kinds.f90 \
+      stdlib_logger.f90
       stdlib_experimental_optval.f90 \
       stdlib_experimental_quadrature.f90 \
       stdlib_experimental_quadrature_trapz.f90 \
