--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -46,6 +46,7 @@ stdlib_io.o: \
 	stdlib_optval.o \
 	stdlib_kinds.o
 stdlib_linalg_diag.o: stdlib_kinds.o
+stdlib_logger.o: stdlib_ascii.o stdlib_optval.o
 stdlib_optval.o: stdlib_kinds.o
 stdlib_quadrature.o: stdlib_kinds.o
 stdlib_stats_mean.o: \
