--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -1,5 +1,8 @@
 SRC = f18estop.f90 \
       stdlib_ascii.f90 \
+      stdlib_bitsets.f90 \
+      stdlib_bitset_64.f90 \
+      stdlib_bitset_large.f90 \
       stdlib_error.f90 \
       stdlib_io.f90 \
       stdlib_kinds.f90 \
