--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -7,6 +7,7 @@ macro(ADDTEST name)
 endmacro(ADDTEST)
 
 add_subdirectory(ascii)
+add_subdirectory(bitsets)
 add_subdirectory(io)
 add_subdirectory(linalg)
 add_subdirectory(logger)
