--- a/src/tests/Makefile.manual
+++ b/src/tests/Makefile.manual
@@ -2,6 +2,7 @@
 
 all:
 	$(MAKE) -f Makefile.manual --directory=ascii
+	$(MAKE) -f Makefile.manual --directory=bitsets
 	$(MAKE) -f Makefile.manual --directory=io
 	$(MAKE) -f Makefile.manual --directory=logger
 	$(MAKE) -f Makefile.manual --directory=optval
@@ -10,6 +11,7 @@ all:
 
 test:
 	$(MAKE) -f Makefile.manual --directory=ascii test
+	$(MAKE) -f Makefile.manual --directory=bitsets test
 	$(MAKE) -f Makefile.manual --directory=io test
 	$(MAKE) -f Makefile.manual --directory=logger test
 	$(MAKE) -f Makefile.manual --directory=optval test
@@ -18,6 +20,7 @@ test:
 
 clean:
 	$(MAKE) -f Makefile.manual --directory=ascii clean
+	$(MAKE) -f Makefile.manual --directory=bitsets clean
 	$(MAKE) -f Makefile.manual --directory=io clean
 	$(MAKE) -f Makefile.manual --directory=logger clean
 	$(MAKE) -f Makefile.manual --directory=optval clean
