--- a/src/tests/Makefile.manual
+++ b/src/tests/Makefile.manual
@@ -11,7 +11,7 @@ all:
 
 test:
 	$(MAKE) -f Makefile.manual --directory=ascii test
-	$(MAKE) -f Makefile.manual --directoru=bitsets test
+	$(MAKE) -f Makefile.manual --directory=bitsets test
 	$(MAKE) -f Makefile.manual --directory=io test
 	$(MAKE) -f Makefile.manual --directory=logger test
 	$(MAKE) -f Makefile.manual --directory=optval test
