--- a/src/tests/stats/Makefile.manual
+++ b/src/tests/stats/Makefile.manual
@@ -1,3 +1,4 @@
-PROGS_SRC = test_mean.f90 test_moment.f90 test_var.f90
+
+PROGS_SRC = test_mean.f90 test_moment.f90 test_var.f90 test_distribution.f90
 
 include ../Makefile.manual.test.mk
