--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -1,8 +1,8 @@
 SRC = f18estop.f90 \
       stdlib_ascii.f90 \
       stdlib_bitsets.f90 \
-      stdlib_bitset_64.f90 \
-      stdlib_bitset_large.f90 \
+      stdlib_bitsest_64.f90 \
+      stdlib_bitsets_large.f90 \
       stdlib_error.f90 \
       stdlib_io.f90 \
       stdlib_kinds.f90 \
@@ -43,8 +43,8 @@ clean:
 
 # Fortran module dependencies
 f18estop.o: stdlib_error.o
-stdlib_bitset_64.o: stdlib_bitsets.o
-stdlib_bitset_large.o: stdlib_bitsets.o
+stdlib_bitsets_64.o: stdlib_bitsets.o
+stdlib_bitsets_large.o: stdlib_bitsets.o
 stdlib_error.o: stdlib_optval.o
 stdlib_io.o: \
 	stdlib_error.o \
@@ -68,8 +68,8 @@ stdlib_stats_var.o: \
 	stdlib_stats.o
 
 # Fortran sources that are built from fypp templates
-stdlib_bitset_64.f90: stdlib_bitset_64.fypp
-stdlib_bitset_large.f90: stdlib_bitset_large.fypp
+stdlib_bitsets_64.f90: stdlib_bitsets_64.fypp
+stdlib_bitsets_large.f90: stdlib_bitsets_large.fypp
 stdlib_bitsets.f90: stdlib_bitsets.fypp
 stdlib_io.f90: stdlib_io.fypp
 stdlib_linalg.f90: stdlib_linalg.fypp
