--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -1,7 +1,7 @@
 SRC = f18estop.f90 \
       stdlib_ascii.f90 \
       stdlib_bitsets.f90 \
-      stdlib_bitsest_64.f90 \
+      stdlib_bitsets_64.f90 \
       stdlib_bitsets_large.f90 \
       stdlib_error.f90 \
       stdlib_io.f90 \
