--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -12,7 +12,10 @@ SRC = f18estop.f90 \
       stdlib_stats.f90 \
       stdlib_stats_mean.f90 \
       stdlib_stats_moment.f90 \
-      stdlib_stats_var.f90
+      stdlib_stats_var.f90 \
+      stdlib_stats_distribution.f90 \
+      stdlib_stats_distribution_rvs.f90 \
+      stdlib_stats_distribution_implementation.f90 \ 
 
 LIB = libstdlib.a
 
@@ -61,7 +64,13 @@ stdlib_stats_var.o: \
 	stdlib_optval.o \
 	stdlib_kinds.o \
 	stdlib_stats.o
-
+stdlib_stats_distribution_rvs.o: stdlib_kinds.o
+stdlib_stats_distribution.o: \
+    stdlib_error.o \
+	stdlib_kinds.o \
+	stdlib_stats_distribution_rvs.o \
+stdlib_stats_distribution_imp.o: \
+    stdlib_stats_distribution.o
 # Fortran sources that are built from fypp templates
 stdlib_io.f90: stdlib_io.fypp
 stdlib_linalg.f90: stdlib_linalg.fypp
@@ -71,3 +80,7 @@ stdlib_stats.f90: stdlib_stats.fypp
 stdlib_stats_mean.f90: stdlib_stats_mean.fypp
 stdlib_stats_moment.f90: stdlib_stats_moment.fypp
 stdlib_stats_var.f90: stdlib_stats_var.fypp
+stdlib_stats_distribution_rvs.f90: stdlib_stats_distribution_rvs.fypp
+stdlib_stats_distribution.f90: stdlib_stats_distribution.fypp
+stdlib_stats_distribution_implementation.f90: \
+    stdlib_stats_distribution_implementation.fypp
