--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -15,7 +15,7 @@ SRC = f18estop.f90 \
       stdlib_stats_var.f90 \
       stdlib_stats_distribution.f90 \
       stdlib_stats_distribution_rvs.f90 \
-      stdlib_stats_distribution_implementation.f90 \ 
+      stdlib_stats_distribution_implementation.f90
 
 LIB = libstdlib.a
 
