--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,9 @@
 
 # Create a list of the files to be preprocessed
 set(fppFiles
+    stdlib_bitsets.fypp
+    stdlib_bitsets_64.fypp
+    stdlib_bitsets_large.fypp
     stdlib_io.fypp
     stdlib_linalg.fypp
     stdlib_linalg_diag.fypp
@@ -15,6 +18,9 @@ set(fppFiles
     stdlib_quadrature.fypp
     stdlib_quadrature_trapz.fypp
     stdlib_quadrature_simps.fypp
+    stdlib_stats_distribution_PRNG.fypp
+    stdlib_stats_distribution_uniform.fypp
+	stdlib_stats_distribution_normal.fypp
 )
 
 
