--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -18,7 +18,8 @@ SRC = f18estop.f90 \
       stdlib_stats_var.f90 \
       stdlib_stats_distribution_PRNG.f90\
       stdlib_stats_distribution_uniform.f90 \
-	  stdlib_stats_distribution_normal.f90
+      stdlib_stats_distribution_normal.f90 \
+      stdlib_stats_distribution_exponential.f90
 	  
 LIB = libstdlib.a
 
@@ -72,15 +73,20 @@ stdlib_stats_var.o: \
 	stdlib_stats.o
 stdlib_stats_distribution_PRNG.o: stdlib_kinds.o
 stdlib_stats_distribution_uniform.o: \
-    stdlib_kinds.o \
+	stdlib_kinds.o \
 	stdlib_error.o \
 	stdlib_stats_distribution_PRNG.o
 stdlib_stats_distribution_normal.o \
-    stdlib_kinds.o
+	stdlib_kinds.o
 	stdlib_error.o \
 	stdlib_stats_distribution.PRNG.o \
 	stdlib_stats_distribution.uniform.o
-
+stdlib_stats_distribution_exponential.o \
+	stdlib_kinds.o \
+	stdlib_error.o \
+	stdlib_stats_distribtuion_PRNG.o \
+	stdlib_stats_distribution_uniform.o
+	
 # Fortran sources that are built from fypp templates
 stdlib_bitsets_64.f90: stdlib_bitsets_64.fypp
 stdlib_bitsets_large.f90: stdlib_bitsets_large.fypp
@@ -96,3 +102,4 @@ stdlib_stats_var.f90: stdlib_stats_var.fypp
 stdlib_stats_distribution_PRNG.f90: stdlib_stats_distribution_PRNG.fypp
 stdlib_stats_distribution_uniform.f90: stdlib_stats_distribution_uniform.fypp
 stdlib_stats_distribution_normal.f90: stdlib_stats_distribution_normal.fypp
+stdlib_stats_distribution_exponential.f90: stdlib_stats_distribution.exponential.fypp
