--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -68,12 +68,24 @@ stdlib_linalg_diag.o: \
 stdlib_logger.o: stdlib_ascii.o stdlib_optval.o
 stdlib_optval.o: stdlib_kinds.o
 stdlib_quadrature.o: stdlib_kinds.o
+stdlib_quadrature_simps.o: \
+	stdlib_quadrature.o \
+	stdlib_error.o \
+	stdlib_kinds.o
 stdlib_quadrature_trapz.o: \
 	stdlib_quadrature.o \
 	stdlib_error.o \
 	stdlib_kinds.o
 stdlib_stats.o: \
 	stdlib_kinds.o
+stdlib_stats_corr.o: \
+	stdlib_optval.o \
+	stdlib_kinds.o \
+	stdlib_stats.o
+stdlib_stats_cov.o: \
+	stdlib_optval.o \
+	stdlib_kinds.o \
+	stdlib_stats.o
 stdlib_stats_mean.o: \
 	stdlib_optval.o \
 	stdlib_kinds.o \
